--- a/estils.css
+++ b/estils.css
@@ -14,20 +14,18 @@ body{
 
 h1{
   font-size:90px;
-  font-weight:700;
   text-align: center;
   color:#ffff;
-  font-family: 'Kulhu Regular', sans-serif;
+  font-family: "Arial Narrow";
 }
 
 .topnav p{
-  font-weight:700;
   text-align: center;
+  font-weight: bold;
   color:#ffff;
   font-size:40px;
   margin-top: -35px;
-  font-family: 'Kulhu Regular', sans-serif;
-
+  font-family: "Arial Narrow";
 }
 
 h2{
@@ -48,11 +46,10 @@ h3{
 
 h4{
   line-height:46px;
-  font-size: 40px;
-  font-weight: 900;
+  font-size: 50px;
   text-align: center;
   color: #AF2025;
-  font-family: 'Kulhu One', sans-serif;
+  font-family: "Arial Narrow";
 }
 
 h5{
@@ -112,7 +109,7 @@ h5{
 .presentacio{
   margin-top: 80px;
   color: white;
-  height: 1800px;
+  height:auto;
   width: 100%;
   position: relative;
   background-color: none;
@@ -120,7 +117,7 @@ h5{
 
 .title{
   height:130px;
-  padding-top: 60px;
+  padding-top: 25px;
   background-color: none;
 }
 
@@ -139,6 +136,7 @@ h5{
   font-weight: 400;
   line-height: 35px;
   padding: 20px;
+  margin: 30px;
 }
 
 #tx{
@@ -201,11 +199,12 @@ h5{
   margin-bottom: 20px;
   background-color: white;
   height: auto;
+  overflow:  hidden;
 }
 
 .platitos-menu-titulo{
   border-bottom: 10px dotted #AF2025;
-  padding-bottom: 1em;
+  padding-bottom: 0.4em;
 }
 
 .platitos-menu{
@@ -226,7 +225,7 @@ h5{
   height: 180px;
   flex-shrink:0;
   object-fit: cover;
-  margin-right: 1.5em;
+  margin-right:1em;
 }
 
 .platitos-item-texto{
@@ -242,6 +241,7 @@ h5{
 
 .platitos-item-nombre{
   margin-right: 1.5em;
+  font-size:28px;
 }
 
 .platitos-item-desc{
@@ -275,6 +275,7 @@ h5 span.platitos-item-datillo{
 .platito{
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 30px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
@@ -332,7 +333,7 @@ h5 span.platitos-item-datillo{
 }
 
 .platito-item-desc{
-  line-height: 1.6;
+  line-height: 1.3;
 }
 
 
@@ -594,16 +595,15 @@ footer{
   bottom: 0;
   height: auto;
   width: 100%;
-  padding-top: 40px;
-  padding-bottom: 5px;
+  padding-top: 28px;
+  padding-bottom: 18px;
   text-align: center;
-  z-index: -2;
+  color:black;
 
 }
 
 footer .pie{
   height: 30px;
-  z-index: -1;
   text-decoration: none;
 }
 
@@ -689,26 +689,47 @@ footer .pie img{
   }
 
   .receptes{
-    font-size: 19px
+    font-size: 17px;
+
   }
   .platitos-menu{
     grid-template-columns:none;
   }
+
+.platito-item-imagenes img{
+    display:none;
+  }
+
+  .platito-item-imagenes{
+    display:none;
+  }
+
   .platitos-item-imagenes{
-    width: 120px;
-    height: 120px;
+    height:90px;
+    width:90px;
   }
 
   .platito{
     margin-top: 120px;
+    margin-bottom: 30px;
   }
 
   .platito-menu{
     grid-template-columns:1fr;
   }
+
   .platito-item-imagenes{
     width: 120px;
     height: 120px;
+  }
+
+  .platitos-item-desc{
+    line-height:1.4;
+    text-justify: inter-word;
+  }
+
+  .platitos-item-nombre{
+    font-size:24px;
   }
 }
 
@@ -789,6 +810,7 @@ footer .pie img{
   position: fixed;
   right: 50px;
   bottom: 50px;
+  z-index: 4;
 }
 
 #boton a:link{
